--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,18 +1,14 @@
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><strong>PIMP MY STRIDE CREW</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
+            <a class="navbar-brand" [routerLink]="['/']"><strong>PIMP MY STRIDE CREW</strong></a>
+            <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto mb-2 mb-md-0">
-                    <li class="nav-item active">
+                    <!-- <li class="nav-item active">
                         <a class="nav-link" aria-current="page" href="#">Home</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
+                        <a class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " [routerLink]="['/crew']" routerLinkActive="router-link-active"
