--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -29,30 +29,30 @@
     <ngb-carousel *ngIf="images">
         <ng-template ngbSlide>
             <div class="picsum-img-wrapper">
-                <img [src]="images[0]" alt="Random first slide" width="100%">
+                <img src="assets/1fb136ed-89c0-43b7-8272-91860d97acd4.jpg" alt="Random first slide" width="100%">
             </div>
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
                 <h3>First slide label</h3>
                 <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
-            </div>
+            </div> -->
         </ng-template>
         <ng-template ngbSlide>
             <div class="picsum-img-wrapper">
-                <img [src]="images[1]" alt="Random second slide" width="100%">
+                <img src="assets/bc223bbc-b07f-41ba-9466-d56be2fae72b.jpg" alt="Random second slide" width="100%">
             </div>
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
                 <h3>Second slide label</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </div>
+            </div> -->
         </ng-template>
         <ng-template ngbSlide>
             <div class="picsum-img-wrapper">
-                <img [src]="images[2]" alt="Random third slide" width="100%">
+                <img src="assets/74c26de1-7d68-41e3-8d89-8954cfd48d21.jpg" alt="Random third slide" width="100%">
             </div>
-            <div class="carousel-caption">
+            <!-- <div class="carousel-caption">
                 <h3>Third slide label</h3>
                 <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
-            </div>
+            </div> -->
         </ng-template>
     </ngb-carousel>
 
